--- a/web/index.html
+++ b/web/index.html
@@ -363,7 +363,7 @@
                               <h3>Resources</h3>
                               <ul class="menu_footer">
                                  <li><a href="index.html">Home</a><li>
-                                 <li><a href="javascript:void(0)">What we do</a><li>
+                                 <li><a href="javascript:void(0)">What we </a><li>
                                  <li> <a href="javascript:void(0)">Media</a><li>
                                  <li> <a href="javascript:void(0)">Travel Advice</a><li>
                                  <li><a href="javascript:void(0)">Protection</a><li>
